# Data-Structures-Algorithms

./: CMakeLists.txt  CopyConstructorMain.cpp  MoveAssigConstrMain.cpp  README.md  main.cpp  main2.cpp  main3.cpp  week4main.cpp
Generics/: Generics Explanation  RectangleGenerics.h  RectangleGenerics.tpp  StudentGenerics.h  StudentGenerics.tpp
SMSWithEncapsulation/: SMS_With_Encapsulation.cpp  SMS_With_Encapsulation.h
Week2/include/: LLCommands.h  LLCommands.tpp  LinkedList.h  LinkedList.tpp  PracticeTask.h  PracticeTask.tpp  SecondLinkedList.h  SecondLinkedList.tpp  SecondPracticeTask.h  SecondPracticeTask.tpp
Week2/src/: week2main.cpp
Week_1/include/: DestructorEx.h  DestructorEx.tpp  OperatorOverloading.h  OperatorOverloading.tpp  PracticeAll.h  PracticeAll.tpp  RuleOfFive.h  RuleOfFive.tpp  StudentIterator.h  StudentIterator.tpp  StudentListIterator.h
Week_1/src/: iterator_main.cpp  operator_overloading_main.cpp  references_main.cpp  rule_of_five_main.cpp
Week_1_Revision/: Car.cpp  Car.h  SecondStudent.cpp  SecondStudent.h  Student.cpp  Student.h
Week_1_Revision/CopyConstructor_Assignment_2and3Rule/: Student.cpp  Student.h
Week_1_Revision/Destructor(FirstRule)/: Book.h  Car.h  TemplateStudent.h  TemplateStudent.tpp
Week_1_Revision/Destructor_FirstRule/: BankAccount.h  BankAccount.tpp  Book.h  Book.tpp  Car.tpp  DestructorSimpleExample
Week_1_Revision/MoveConstr_Assignment_4and5Rule/: SecStudent.cpp  SecStudent.h
Week_1_Revision/Pointers&Reference/: GoesInMain
Week_1_Revision/Rule_Of_Five/: RuleStudent.h  (+1 more)
homework_clean/: .gitignore  CMakeLists.txt  README.md
homework_clean/.github/workflows/: classroom.yml
homework_clean/include/: Node.h  XorLinkedList.h  XorLinkedList.tpp
homework_clean/src/: main.cpp
homework_clean/test/: tests.cpp
(+21 files in other folders)
